--- a/HomeWorks/Lab8/Lab work 8.ipynb
+++ b/HomeWorks/Lab8/Lab work 8.ipynb
@@ -663,13 +663,13 @@
     "print('Head: ', df_.head(5))\n",
     "\n",
     "print('')\n",
-    "print('Sorder by CONFIDENCE: ') \n",
+    "print('Sorted by CONFIDENCE: ') \n",
     "print(df_[['Items', 'Antecedent', 'Confidence']].sort_values(by ='Confidence', ascending = False))\n",
     "print('')\n",
-    "print('Sorder by SUPPORT: ') \n",
+    "print('Sorted by SUPPORT: ') \n",
     "print(df_[['Items', 'Antecedent', 'Support']].sort_values(by ='Support', ascending = False))\n",
     "print('')\n",
-    "print('Sorder by LIFT: ') \n",
+    "print('Sorted by LIFT: ') \n",
     "print(df_[['Items', 'Antecedent', 'Lift']].sort_values(by ='Lift', ascending = False))\n",
     "\n",
     "#for item in association_rules:\n",
@@ -1058,6 +1058,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
